user.css
/* ... */
a.main-collectionLinkButton-collectionLinkButton.main-collectionLinkButton-selected.active {
    background: none !important;
}
/*
-------------------
TOP BAR
-------------------
*/
.Root__fixed-top-bar {
    background: none !important;
}
.main-topBar-background {
    display: none;
}
.main-trackList-trackListHeaderStuck {
    visibility: hidden;
}
.main-topBar-historyButtons {
    /* position: absolute;
  left: calc(var(--nav-bar-width) + 25px); */
    gap: 10px;
}
.Root__top-bar .ButtonInner-sc-14ud5tc-0.encore-bright-accent-set {
    height: 32px;
    width: 32px;
}
.main-userWidget-box span,
.main-userWidget-box svg {
    display: none;
}
.RfdRTSGwulyQdDepLUTT .main-userWidget-displayName,
.RfdRTSGwulyQdDepLUTT .main-userWidget-chevron {
    display: none;
}
/* discog sort buttons */
.button-container {
    display: flex;
}
a.main-topBar-button,
.main-topBar-historyButtons .main-topBar-button {
    width: 32px;
    height: 32px;
    border-radius: 8px;
    background-color: rgba(var(--spice-rgb-shadow), 0.7);
    color: rgba(var(--spice-rgb-text), 0.7);
}
.Root__fixed-top-bar svg.Svg-ytk21e-0.jAKAlG {
    height: 18px;
    width: 18px;
}
/* improve title alignment w/ play button */
span.main-entityHeader-topbarTitle {
    line-height: 45px;
    height: 40px;
}
/*
-------------------
MARKETPLACE RELATED
-------------------
*/
.marketplace-tabBar-active,
.oaNVBli46GtVjaQKB15g {
    background-color: rgba(var(--spice-rgb-tab-active), 0.3);
}
.Type__TypeElement-goli3j-0.eHCcSU.ellipsis-one-line {
    font-size: 0.875rem;
    line-height: 1rem;
    font-weight: 700;
}
button.marketplace-header-icon-button {
    background-color: rgba(var(--spice-rgb-shadow), 0.7);
    height: 32px;
    min-width: 32px;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgba(var(--spice-rgb-text), 0.7);
}
button.marketplace-header-icon-button:hover {
    color: var(--spice-text);
}
svg.devtools-icon {
    fill: inherit;
}
button#marketplace-update {
    background-color: rgba(var(--spice-rgb-shadow), 0.7);
    height: 32px;
    display: flex;
    align-items: center;
    padding: 0 16px;
    color: rgba(var(--spice-rgb-text), 0.7);
    transition: none;
    margin-left: 20px;
}
button#marketplace-update:hover {
    color: var(--spice-text);
}
.marketplace-header input.searchbar-bar {
    background-color: rgba(var(--spice-rgb-shadow), 0.7) !important;
    border: none;
    height: 32px;
}
div#marketplace-readme {
    background: none;
    margin-left: 0;
    padding: 0;
}
/*
-------------------
LIBRARY PAGE
-------------------
*/
a.queue-tabBar-headerItemLink.queue-tabBar-active,
a.marketplace-tabBar-headerItemLink.marketplace-tabBar-active {
    color: var(--spice-text);
}
a.queue-tabBar-headerItemLink:hover,
a.marketplace-tabBar-headerItemLink:hover {
    color: var(--spice-text);
}
a.queue-tabBar-headerItemLink,
a.marketplace-tabBar-headerItemLink {
    background-color: rgba(var(--spice-rgb-shadow), 0.7);
    height: 32px;
    border-radius: 8px;
    display: flex;
    align-items: center;
    color: rgba(var(--spice-rgb-text), 0.7);
}
.main-topBar-topbarContentWrapper.center ul.queue-tabBar-header,
.main-topBar-topbarContentWrapper.center ul.marketplace-tabBar-header,
.main-topBar-topbarContentWrapper.center div.main-topBar-topbarContent {
    display: flex;
    justify-content: center;
}
/*
-------------------
PLAYER BAR
-------------------
*/
footer.main-nowPlayingBar-container {
    border: none;
}
.player-controls__buttons.player-controls__buttons--new-icons {
    margin-right: 10px;
    width: fit-content;
    margin-bottom: 0px;
}
.player-controls {
    flex-direction: row;
}
.main-trackInfo-container {
    flex-grow: 1;
    flex-basis: 0;
}
.main-nowPlayingBar-center {
    max-width: none;
    flex-grow: 1;
}
.main-nowPlayingBar-right {
    width: auto;
    margin-right: 8px;
}

.main-nowPlayingBar-volumeBar {
    min-width: 180px;
}

.main-nowPlayingBar-left {
    width: auto;
    min-width: 0;
    max-width: 30%;
}
button.main-playPauseButton-button {
    background: none;
    color: var(--spice-text);
    --button-size: unset !important;
}
.main-playPauseButton-button svg {
    height: 20px;
    width: 21px;
}
/* progress bar moves smoothly */
.x-progressBar-fillColor {
    transition: transform 0.1s linear;
}
.progress-bar__slider {
    transition: left 0.1s linear;
}
.playback-progressbar-isInteractive .DuvrswZugGajIFNXObAr .x-progressBar-fillColor,
.playback-progressbar-isInteractive .DuvrswZugGajIFNXObAr .progress-bar__slider {
    transition: none;
}
/* connect bar */
.main-connectBar-connectBar {
    border-radius: 0;
    dislay: none;
}
/*
-------------------
MAIN VIEW
-------------------
*/
.Root__main-view {
    background: none !important;
}

.main-view-container {
    -webkit-mask-image: linear-gradient(transparent 64px, rgba(0, 0, 0, 1) 84px);
}
[fade="bottom"] {
/*    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) calc(100% - 20px), transparent 100%);*/
}
[fade="top"] {
/*    -webkit-mask-image: linear-gradient(transparent 64px, rgba(0, 0, 0, 1) 84px);*/
}
[fade="full"] {
/*    -webkit-mask-image: linear-gradient(transparent 64px, rgba(0, 0, 0, 1) 84px, rgba(0, 0, 0, 1) calc(100% - 20px), transparent 100%);*/
}
.main-home-homeHeader {
    display: none;
}
.fSKBdxsPEB5WUAJWTYlh {
    background: transparent;
}
/* ... */

